log
Thu 09 May 2024 03:01:17 PM UTC: 
 treemap.c | 207 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 203 insertions(+), 4 deletions(-)
 tests:  15|4
total_score: 25/70
ce7df5e
Thu 09 May 2024 03:38:40 PM UTC: 
 treemap.c | 47 ++++++++++++-----------------------------------
 1 file changed, 12 insertions(+), 35 deletions(-)
 tests:  15|4
total_score: 25/70
a108aa8
Thu 09 May 2024 03:49:17 PM UTC: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  15|4
total_score: 25/70
4df2827
Thu 09 May 2024 03:50:26 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
63335c7
Thu 09 May 2024 03:57:13 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
4629cc0
Thu 09 May 2024 03:59:59 PM UTC: 
 treemap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  0|0
36ae6cc
Thu 09 May 2024 04:03:21 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccr5SmRO.o: in function `ub_test1':
test.c:(.text+0x1133): undefined reference to `upperBound'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccr5SmRO.o: in function `ub_test2':
test.c:(.text+0x1213): undefined reference to `upperBound'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccr5SmRO.o: in function `ub_test3':
test.c:(.text+0x1313): undefined reference to `upperBound'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccr5SmRO.o: in function `ub_test4':
test.c:(.text+0x1413): undefined reference to `upperBound'
collect2: error: ld returned 1 exit status
Compilation failed
15241b5
Thu 09 May 2024 04:05:23 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
a8acc9a
Thu 09 May 2024 04:07:13 PM UTC: 
 treemap.c | 25 +------------------------
 1 file changed, 1 insertion(+), 24 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:193:1: error: control reaches end of non-void function [-Werror=return-type]
  193 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8b814f3
Thu 09 May 2024 04:07:27 PM UTC: 
 treemap.c | 29 -----------------------------
 1 file changed, 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:164:1: error: control reaches end of non-void function [-Werror=return-type]
  164 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8a51050
Thu 09 May 2024 04:08:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
847d6a4
Thu 09 May 2024 04:10:41 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|4
total_score: 25/70
1e42665
Thu 09 May 2024 04:12:44 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
89fec35
Thu 09 May 2024 04:13:55 PM UTC: 
 treemap.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
 tests:  0|0
f58097f
Thu 09 May 2024 04:15:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
a5ec12f
Sat 11 May 2024 12:52:58 AM UTC: 
 treemap.c | 261 ++++++++++++++++++++++++++++++++++++--------------------------
 1 file changed, 153 insertions(+), 108 deletions(-)
 tests:  29|0
total_score: 70/70
6f592a9
